<resources>
    <string name="app_name">Frede360</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="age">Age</string>

    <!-- Generics -->
    <string name="generic_attention">Attention!</string>
    <string name="generic_empty_label">Nothing found</string>

    <!-- Errors -->
    <string name="error_connection">Something went wrong. Try it again!</string>
    <string name="error_email_empty">Write your email</string>
    <string name="error_email_invalid">This email is not valid</string>
    <string name="error_pwd_invalid">Password must be between 6 and 12 characters long</string>
    <string name="error_age_invalid">Age must be between 18 and 99 years old</string>

    <!-- Log in -->
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>

    <!-- Register -->
    <string name="register_info">Welcome to Frede360!</string>
    <string name="register_msg">Before starting to enjoy Frede360 we need a bit information about you.</string>

    <!-- Home: Image Detail -->
    <string name="image_size">Size: %1$s</string>
    <string name="image_type">Type: %1$s</string>

</resources>
