<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        style="@style/DefaultContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/registerInfo"
            style="@style/PrimaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_info"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/registerMsg"
            style="@style/SecondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_msg"
            app:layout_constraintTop_toBottomOf="@id/registerInfo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:textColorHint="@color/colorPrimaryDark"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/registerMsg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwdContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/colorPrimaryDark"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/mailContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pwdField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="textPassword"
                android:maxEms="12"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageContainer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/age"
            android:textColorHint="@color/colorPrimaryDark"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pwdContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageField"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.frede360.app.commons.ui.Frede360Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:frede360_text="@string/sign_up"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ageContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>